rf pr 980